# best_chess_move_by_elo

./: README.md  pyproject.toml  xadrez_melhor_movimento_por_Rating.txt
src/: aggregate_data.py  configs.py  dashboard.py  download_bulk_games.sh  process_bulk_games.py  retrieve_api.py
src/antigo/: analyze_games.py  process_games.py  retrieve_sample_api.py
